added view for the explorer, please install hulahop!!!

--- a/src/img/app/appViews/mainView.glade
+++ b/src/img/app/appViews/mainView.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Mon Dec 14 18:48:15 2009 -->
+<!--Generated with glade3 3.4.5 on Fri Jan 15 19:09:37 2010 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <child>
@@ -98,7 +98,8 @@
           </packing>
         </child>
         <child>
-          <widget class="GtkHBox" id="hboxWS">
+          <widget class="GtkHBox" id="hbox3">
+            <property name="visible">True</property>
             <child>
               <widget class="GtkAlignment" id="alignment5">
                 <property name="visible">True</property>
@@ -106,12 +107,18 @@
                   <widget class="GtkHButtonBox" id="hbuttonbox3">
                     <property name="visible">True</property>
                     <child>
-                      <widget class="GtkButton" id="buttonDownload">
+                      <widget class="GtkButton" id="buttonSearch">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <property name="label" translatable="yes">Download</property>
+                        <property name="relief">GTK_RELIEF_NONE</property>
                         <property name="response_id">0</property>
+                        <child>
+                          <widget class="GtkImage" id="imageSearch">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-missing-image</property>
+                          </widget>
+                        </child>
                       </widget>
                     </child>
                   </widget>
@@ -124,7 +131,7 @@
                 <child>
                   <widget class="GtkLabel" id="label3">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">WebService</property>
+                    <property name="label" translatable="yes">Search Clics</property>
                   </widget>
                 </child>
               </widget>
