--- a/src/img/app/appViews/MyClicsView.glade
+++ b/src/img/app/appViews/MyClicsView.glade
@@ -1,43 +1,39 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sat Dec 12 01:03:22 2009 -->
+<!--Generated with glade3 3.4.5 on Mon Jan 18 20:22:11 2010 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <child>
       <widget class="GtkVBox" id="vboxAvailable">
         <property name="visible">True</property>
         <child>
-          <widget class="GtkScrolledWindow" id="scrolledwindow2">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-            <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-            <child>
-              <widget class="GtkTreeView" id="treeviewAvailable">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-              </widget>
-            </child>
-          </widget>
-        </child>
-        <child>
           <widget class="GtkHButtonBox" id="hbuttonbox5">
             <property name="visible">True</property>
             <property name="spacing">18</property>
             <child>
-              <widget class="GtkButton" id="playClic">
+              <widget class="GtkButton" id="buttonAllClics">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="relief">GTK_RELIEF_NONE</property>
+                <property name="label" translatable="yes">All Clics</property>
                 <property name="response_id">0</property>
-                <child>
-                  <widget class="GtkImage" id="imagePlay">
-                    <property name="visible">True</property>
-                    <property name="stock">gtk-missing-image</property>
-                  </widget>
-                </child>
               </widget>
+              <packing>
+                <property name="expand">False</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkButton" id="buttonLists">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="label" translatable="yes">Lists</property>
+                <property name="response_id">0</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">1</property>
+              </packing>
             </child>
             <child>
               <widget class="GtkLabel" id="labelMyClics">
@@ -45,7 +41,7 @@
                 <property name="label" translatable="yes">Please, select a Clic</property>
               </widget>
               <packing>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
             <child>
@@ -63,12 +59,32 @@
                 </child>
               </widget>
               <packing>
-                <property name="position">2</property>
+                <property name="position">3</property>
               </packing>
             </child>
           </widget>
           <packing>
             <property name="expand">False</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkScrolledWindow" id="scrolledwindow2">
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+            <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+            <child>
+              <widget class="GtkIconView" id="treeviewAvailable">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="spacing">50</property>
+                <property name="row_spacing">50</property>
+                <property name="column_spacing">50</property>
+                <property name="margin">25</property>
+              </widget>
+            </child>
+          </widget>
+          <packing>
             <property name="position">1</property>
           </packing>
         </child>
