--- a/src/img/app/appViews/mainView.glade
+++ b/src/img/app/appViews/mainView.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Fri Jan 15 19:09:37 2010 -->
+<!--Generated with glade3 3.4.5 on Wed Jan 27 21:25:21 2010 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <child>
@@ -10,11 +10,38 @@
           <widget class="GtkHBox" id="hbox2">
             <property name="visible">True</property>
             <child>
-              <widget class="GtkAlignment" id="alignment1">
+              <widget class="GtkAlignment" id="alignment2">
                 <property name="visible">True</property>
                 <child>
-                  <widget class="GtkHButtonBox" id="hbuttonbox2">
+                  <widget class="GtkImage" id="imageTitle">
                     <property name="visible">True</property>
+                    <property name="stock">gtk-missing-image</property>
+                  </widget>
+                </child>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkAlignment" id="alignment1">
+                <property name="visible">True</property>
+                <property name="top_padding">12</property>
+                <child>
+                  <widget class="GtkVButtonBox" id="vbuttonbox1">
+                    <property name="visible">True</property>
+                    <child>
+                      <widget class="GtkButton" id="buttonManual">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="relief">GTK_RELIEF_NONE</property>
+                        <property name="response_id">0</property>
+                        <child>
+                          <widget class="GtkImage" id="imageManual">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-missing-image</property>
+                          </widget>
+                        </child>
+                      </widget>
+                    </child>
                     <child>
                       <widget class="GtkButton" id="buttonAbout">
                         <property name="visible">True</property>
@@ -29,18 +56,10 @@
                           </widget>
                         </child>
                       </widget>
+                      <packing>
+                        <property name="position">1</property>
+                      </packing>
                     </child>
-                  </widget>
-                </child>
-              </widget>
-            </child>
-            <child>
-              <widget class="GtkAlignment" id="alignment2">
-                <property name="visible">True</property>
-                <child>
-                  <widget class="GtkLabel" id="label2">
-                    <property name="visible">True</property>
-                    <property name="label" translatable="yes">About</property>
                   </widget>
                 </child>
               </widget>
@@ -51,46 +70,20 @@
           </widget>
         </child>
         <child>
-          <widget class="GtkHBox" id="hbox1">
+          <widget class="GtkAlignment" id="alignment3">
             <property name="visible">True</property>
+            <property name="left_padding">200</property>
+            <property name="right_padding">200</property>
             <child>
-              <widget class="GtkAlignment" id="alignment3">
+              <widget class="GtkLabel" id="label1">
                 <property name="visible">True</property>
-                <child>
-                  <widget class="GtkHButtonBox" id="hbuttonbox1">
-                    <property name="visible">True</property>
-                    <child>
-                      <widget class="GtkButton" id="buttonMyClics">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="relief">GTK_RELIEF_NONE</property>
-                        <property name="response_id">0</property>
-                        <child>
-                          <widget class="GtkImage" id="imageMyClics">
-                            <property name="visible">True</property>
-                            <property name="stock">gtk-missing-image</property>
-                          </widget>
-                        </child>
-                      </widget>
-                    </child>
-                  </widget>
-                </child>
+                <property name="label" translatable="yes">Lorem ipsum te vis dico aperiri perpetua, sed in modus hendrerit efficiendi. 
+Accommodare interpretaris qui no, at aeque nemore dicunt his. Fabulas 
+indoctum erroribus ei mea, accusam gloriatur qui at, ei vel posse soleat 
+legimus. Solum dicant putant te sed, nobis iuvaret oporteat no pri. Ut sumo 
+impedit vis, quis voluptatibus an has, ex brute hendrerit mea. Ei diam honestatis 
+delicatissimi nam, per no nulla iuvaret expetenda.</property>
               </widget>
-            </child>
-            <child>
-              <widget class="GtkAlignment" id="alignment4">
-                <property name="visible">True</property>
-                <child>
-                  <widget class="GtkLabel" id="label1">
-                    <property name="visible">True</property>
-                    <property name="label" translatable="yes">My Clics</property>
-                  </widget>
-                </child>
-              </widget>
-              <packing>
-                <property name="position">1</property>
-              </packing>
             </child>
           </widget>
           <packing>
@@ -103,6 +96,8 @@
             <child>
               <widget class="GtkAlignment" id="alignment5">
                 <property name="visible">True</property>
+                <property name="left_padding">25</property>
+                <property name="right_padding">25</property>
                 <child>
                   <widget class="GtkHButtonBox" id="hbuttonbox3">
                     <property name="visible">True</property>
@@ -121,23 +116,27 @@
                         </child>
                       </widget>
                     </child>
+                    <child>
+                      <widget class="GtkButton" id="buttonMyClics">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="relief">GTK_RELIEF_NONE</property>
+                        <property name="response_id">0</property>
+                        <child>
+                          <widget class="GtkImage" id="imageMyClics">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-missing-image</property>
+                          </widget>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
                   </widget>
                 </child>
               </widget>
-            </child>
-            <child>
-              <widget class="GtkAlignment" id="alignment6">
-                <property name="visible">True</property>
-                <child>
-                  <widget class="GtkLabel" id="label3">
-                    <property name="visible">True</property>
-                    <property name="label" translatable="yes">Search Clics</property>
-                  </widget>
-                </child>
-              </widget>
-              <packing>
-                <property name="position">1</property>
-              </packing>
             </child>
           </widget>
           <packing>
