added home button in Browser. modified Clics View (now user can play and delete clics with one clic)

--- a/src/img/app/appViews/BrowserView.glade
+++ b/src/img/app/appViews/BrowserView.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Fri Jan 15 19:38:33 2010 -->
+<!--Generated with glade3 3.4.5 on Thu Jan 28 19:33:16 2010 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <child>
@@ -10,6 +10,21 @@
           <widget class="GtkHButtonBox" id="hbuttonbox1">
             <property name="visible">True</property>
             <child>
+              <widget class="GtkButton" id="buttonFirstPage">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="label" translatable="yes">Página Principal</property>
+                <property name="response_id">0</property>
+              </widget>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
               <widget class="GtkButton" id="buttonHome">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -18,12 +33,13 @@
                 <child>
                   <widget class="GtkImage" id="imageHome">
                     <property name="visible">True</property>
+                    <property name="stock">gtk-missing-image</property>
                   </widget>
                 </child>
               </widget>
-            </child>
-            <child>
-              <placeholder/>
+              <packing>
+                <property name="position">3</property>
+              </packing>
             </child>
           </widget>
           <packing>
