--- a/src/img/app/appViews/MyClicsView.glade
+++ b/src/img/app/appViews/MyClicsView.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Thu Jan 28 19:16:47 2010 -->
+<!--Generated with glade3 3.4.5 on Tue Feb  2 11:07:25 2010 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <child>
@@ -60,6 +60,47 @@
           </packing>
         </child>
         <child>
+          <widget class="GtkHBox" id="hboxSure">
+            <property name="spacing">15</property>
+            <child>
+              <widget class="GtkLabel" id="labelSure">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">¿Seguro que quieres borrar el clic</property>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkButton" id="buttonSI">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="label" translatable="yes">     SI     </property>
+                <property name="response_id">0</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkButton" id="buttonNO">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="label" translatable="yes">     NO     </property>
+                <property name="response_id">0</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
           <widget class="GtkScrolledWindow" id="scrolledwindow2">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
@@ -77,7 +118,7 @@
             </child>
           </widget>
           <packing>
-            <property name="position">1</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </widget>
