--- a/src/img/app/appViews/BrowserView.glade
+++ b/src/img/app/appViews/BrowserView.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Fri Jan 29 18:07:10 2010 -->
+<!--Generated with glade3 3.4.5 on Wed Feb  3 15:39:07 2010 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <child>
@@ -29,6 +29,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="relief">GTK_RELIEF_NONE</property>
                 <property name="response_id">0</property>
                 <child>
                   <widget class="GtkImage" id="imageHome">
