--- a/src/img/app/appViews/DownloadingInfo.glade
+++ b/src/img/app/appViews/DownloadingInfo.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Tue Feb  2 17:48:33 2010 -->
+<!--Generated with glade3 3.4.5 on Thu Feb  4 15:37:25 2010 -->
 <glade-interface>
   <widget class="GtkDialog" id="dialog">
     <property name="visible">True</property>
@@ -15,7 +15,7 @@
         <child>
           <widget class="GtkLabel" id="label">
             <property name="visible">True</property>
-            <property name="label" translatable="yes">Una vez descargado, tendras el clic en tu listado.</property>
+            <property name="label" translatable="yes">UNA VEZ DESCARGADO, TENDRAS EL CLIC EN TU LISTADO.</property>
             <property name="ellipsize">PANGO_ELLIPSIZE_END</property>
           </widget>
           <packing>
@@ -38,6 +38,7 @@
             </child>
           </widget>
           <packing>
+            <property name="expand">False</property>
             <property name="pack_type">GTK_PACK_END</property>
           </packing>
         </child>
